# sight-agent

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  db.json  docker-compose.yml  log4rs.yaml  setup.toml
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
migrations/: 20220616191944_kb_table.down.sql  20220616191944_kb_table.up.sql  20220616192414_reply_table.down.sql  20220616192414_reply_table.up.sql  20220621000301_update_kd_table.down.sql  20220621000301_update_kd_table.up.sql  20220621000309_update_reply_table.down.sql  20220621000309_update_reply_table.up.sql
src/: config.rs  db.rs  main.rs
src/routes/: auth.rs  info.rs  kb_list.rs  kb_reply.rs  knowledge_base.rs  mod.rs  reply.rs
src/types/: account.rs  info.rs  kb.rs  knowledge_base.rs  mod.rs  pagination.rs  reply.rs
