[package]
name = "rust-help-center"
version = "0.1.0"
authors = ["Breno Rocha <bhrochamail@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19", features = ["full"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
warp = "0.3"
handle-errors = { path = "handle-errors" }
log = "0.4"
log4rs = "1.1"
colored = "2"
