[package]
name = "rust-kb-center"
version = "0.1.0"
authors = ["Breno Rocha <bhrochamail@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19", features = ["full"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
warp = "0.3"
handle-errors = { path = "handle-errors" }
colored = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid"] }
rand = "0.8"
rust-argon2 = "1"
paseto = "2"
chrono = "0.4.19"
config = { version = "0.13", features = ["toml"] }
clap = { version = "3", features = ["derive"] }
proc-macro2 = "1"
dotenv = "0.15"

[build-dependencies]
platforms = "2"
